logviewer fixed alignment

--- a/src/zbase/webui/views/logviewer/logviewer.css
+++ b/src/zbase/webui/views/logviewer/logviewer.css
@@ -14,10 +14,10 @@
 
 @media (max-width: 2048px) {
   .zbase_logviewer .logviewer_pane .result_pane {
-    margin-left: -28px;
-    margin-right: -28px;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-left: -24px;
+    margin-right: -24px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
